Made a lot of smalle bug-fix based on issues from findbugs reports.